--- a/package.json
+++ b/package.json
@@ -3,14 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve  && webpack-dev-server --open",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.2",
+    "@vee-validate/i18n": "^4.1.20",
+    "@vee-validate/rules": "^4.1.20",
+    "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.4.1",
+    "clipboard": "^2.0.10",
     "core-js": "^3.8.3",
+    "jquery": "^3.6.0",
+    "material-design-icons": "^3.0.1",
+    "mitt": "^3.0.0",
+    "popper.js": "^1.16.1",
+    "vee-validate": "^4.5.10",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-axios": "^3.4.1",
+    "vue-loading-overlay": "^5.0.3",
+    "vue-router": "^4.0.3",
+    "vue-sweetalert2": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
